<resources>
    <string name="app_name">SceneKey</string>
    <string name="facebook_app_id">1602336283352167</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="or">Or</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="fullname">Fullname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="underDevelopment">Under Development</string>
    <string name="cameraPermissionDeny">Camera permission deny</string>
    <string name="locationPermissionDeny">Location permission deny</string>
    <string name="cancel">Cancel</string>
    <string name="somethingwentwrong">Something went wrong</string>
    <string name="internetConnectivityError">Please connect to internet</string>
    <string name="emailEmptyError">Please enter email</string>
    <string name="fullNameEmptyError">Please enter fullname</string>
    <string name="passEmptyError">Please enter password</string>
    <string name="fullNameLengthError">fullname is too short (minimum 3 characters)</string>
    <string name="emailInvalidError">Please enter a valid email address</string>
    <string name="passLengthError">Password is too short (minimum 6 characters)</string>
    <string name="eLocationPermission_new"> \"SceneKey\" requires \n Location Service to work. \n Please provide location permission. </string>
    <string name="eYourLocation"> There was an error getting your Location ! \n please check GPS , internet  &amp; try again after a moment. ("High accuracy mode is required") </string>
    <string name="high_accuracy">  please check GPS and set Location Service to high accuracy mode. </string>
    <string name="gps_new"> \"SceneKey\" requires \n Location Service to work. </string>
    <string name="try_again"> Try Again.</string>
    <string name="ok"> OK</string>
    <string name="locationServicesNotActive">Location Services Not Active</string>
    <string name="couldntGetLocation"> Couldn\'t get location. Please try again. </string>
    <string name="pick_image_intent_text" >Choose an image</string>
    <string name="crop_image_activity_title" >Crop Image</string>
    <string name="crop_image_menu_rotate_left" >Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right" >Rotate</string>
    <string name="crop_image_menu_crop" >Crop</string>
    <string name="pick_image_intent_chooser_title" >Select source</string>
    <string name="result_image_desc" >crop result</string>
    <string name="menu1" > Camera </string>
    <string name="menu2" > Gallery </string>
    <string name="drop_arrow" > \u0020 &#9698; \u0020\u0020</string>
    <string name="bio"> Bio</string>
    <string name="trending"> Trending</string>
    <string name="map"> Map</string>
    <string name="enter"> Enter</string>
    <string name="scene"> The Scene</string>
    <string name="addVenue"> Add Venue</string>
    <string name="addEvent"> Add Event</string>
    <string name="editEvent"> Edit Event</string>
    <string name="venue"> Venue</string>
    <string name="venue_details"> Venue Details</string>
    <string name="upload_pictures"> Upload Pictures </string>
    <string name="upload_pictures_a"> upload your profile pics </string>
    <string name="uploads"> Uploads</string>
    <string name="selectTag"> Select Tag </string>
    <string name="selectType"> Select Type </string>
    <string name="comment"> Comment </string>
    <string name="start"> Start </string>
    <string name="next"> Next </string>
    <string name="skip"> Got It </string>
    <string name="publish"> Publish </string>
    <string name="Search"> Search</string>
    <string name="add"> Add</string>
    <string name="Sorry"> Sorry!</string>
    <string name="Sorry2"> You are not currently at a \n Scenekey event</string>
    <string name="Sorry2_new"> You are not currently at a \n Scenekey event .When you arrive at an event . the icon will appear on this screen . Select the icon to enter the room. </string>
    <string name="sorry3"> Unfortunately, you cannot access this feature right now.Check back for further updates</string>
    <string name="tryDemo"> Try a Demo</string>
    <string name="sample_event"> Michael Jackson live</string>
    <string name="sample_Address"> Staples Center Los Angeles </string>
    <string name="description">Description </string>
    <string name="TheRoom">The Room</string>
    <string name="PTBS"> Like this event, and \n share a pic or comment \n to the big screen!</string>
    <string name="myprofile"> My Profile</string>
    <string name="Go"> Go</string>
    <string name="stop"> Stop</string>
    <string name="caution"> Caution</string>
    <string name="Yes"> Yes</string>
    <string name="No"> No</string>
    <string name="Alert"> Alert</string>
    <string name="Nudge"> Nudge</string>
    <string name="Reply"> Reply</string>
    <string name="message"> Message</string>
    <string name="DetailMy"> My Details</string>
    <string name="View"> View Profile</string>
    <string name="notification1"> Welcome to Scenester! </string>
    <string name="notification2"> join the room at any event </string>
    <string name="notification3"> send someone in the room a little nudge </string>
    <string name="notification4"> have a real time look into events everywhere! </string>
    <string name="notification5"> share a rating, a comment , or a pic. </string>
    <string name="get_direction"> Get Directions </string>
    <string name="i_have_best"> I have the best view </string>
    <string name="omg..smooth"> OMG.. Smooth Criminal! </string>
    <string name="ilovemike"> I Love mike. Sick dance moves! </string>
    <string name="whatsHap"> What\'s happening! </string>
    <string name="AlertMsg1"> Please turn on your GPS </string>
    <string name="closeformap"> This will close Scenekey and open google map. \n continue?  </string>
    <string name="confirmUpdate"> Confirm update?  </string>
    <string name="confirmDelete"> Confirm delete?  </string>
    <string name="mapNoevent"> Hi ,unfortunately, there are no events occurring in your area at this time.Please check back for updates. </string>
    <string name="nudgeBack"> Nudge back </string>
    <string name="goodNudge"> Good nudge </string>
    <string name="send"> Send </string>
    <string name="startTime"> Start Time </string>
    <string name="EndTime"> End Time </string>
    <string name="name"> Name </string>
    <string name="type"> Type </string>
    <string name="address"> Address </string>
    <string name="uploadeimg"> Uploade Image </string>
    <string name="contact"> Contact Number </string>
    <string name="date"> Date </string>
    <string name="time"> Time </string>
    <string name="duration"> Duration </string>
    <string name="addtag"> Add Tag </string>
    <string name="noresult"> No result found </string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednseday">Wednesday</string>
    <string name="thursady">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="setting"> Setting </string>
    <string name="settings"> Settings </string>
    <string name="aboutme"> About me </string>
    <string name="lastname"> Last Name </string>
    <string name="information"> Information </string>
    <string name="info"> Info </string>
    <string name="termsandcc"> Terms &amp; Conditions </string>
    <string name="privacy"> Privacy Policy </string>
    <string name="feedback"> Feedback </string>
    <string name="logout"> Logout </string>
    <string name="admin"> Admin </string>
    <string name="yourlocatoion"> Your Location </string>
    <string name="noemail"> Email not provided </string>
    <string name="update"> Update </string>
    <string name="delete"> Delete </string>
    <string name="create"> Create </string>
    <string name="uplode"> Uploade new imge </string>
    <string name="searchvenue"> Search venue </string>
    <string name="searchtag"> Search tag </string>
    <string name="search"> Search </string>
    <string name="sorryEvent"> Sorry!! you have to be at this event to interact </string>
    <string name="noNotification"> You have no notification at this time </string>
    <string name="charectersremain"> characters remaining </string>
    <string name="post"> Post </string>
    <string name="no_one"> There is no one currently in the room. </string>
    <string name="not_start"> This event has not started yet. </string>
    <string name="dontBore"> Don\'t be boring Key in and be the first! </string>
    <string name="shoot"> Shoot! This feature is unavailable.\n Be on the lookout! </string>
    <string name="no_tag"> Unfortunately, you cannot access this feature right now. Check back for further updates </string>
    <string name="eyourlocatoion"> There was an error getting your Location ! \n please check GPS , internet  &amp; try again after a moment. ("High accuracy mode is required") </string>
    <string name="elocatoion"> There was an error getting your Location . </string>
    <string name="enoactivity"> No app found to open the pdf . </string>
    <string name="elocationPermission"> Please provide location permission to Scenekey. </string>
    <string name="einternet"> Please connect to internet . </string>
    <string name="enotStarted">You are at the event but it hasn\'t started yet.</string>
    <string name="enotat"> You have not yet arrived at this scene. </string>
    <string name="w_photo_limit"> Unfortunately, you are limited to only 5 profile photos </string>
    <string name="t_photo_limit"> Photo Limit Reached </string>
    <string name="kp_like"> You liked this event. +1 Key Points </string>
    <string name="kp_msg_sent"> Message Sent! +1 Key Points </string>
    <string name="kp_nudge"> Good Nudge! +1 Key Points </string>
    <string name="kp_comment">_</string>
    <string name="kp_keyin">_</string>
    <string name="kp_img_post">_</string>
    <string name="kp_unlike"> You unliked this event. -1 Key Points </string>
    <string name="unfortunatly"> Hi, unfortunately, there are no events occurring in your area at this time.  Please check back for updates. </string>
    <string name="photo_error"> Opps.  There was a problem saving your photo.  Please try again or contact help@scenekey.com. </string>
    <string name="photo_success"> Photo has been posted successfully. </string>
    <string name="comnt_error"> Opps.There was a problem posting your comment.  Please try again or contact help@scenekey.com </string>
    <string name="comnt_sucess"> Comment has been posted! </string>
    <string name="gps_new_msg"> Go to Settings to allow \"Nudge\"  to determine your location. </string>
    <string name="elocationPermission_new"> \"Nudge\" requires \n Location Service to work. \n Please provide location permission. </string>
    <string name="elocatoion_new"> \"Nudge\" requires \n Location Service to work. please try again </string>
</resources>