<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/cus_round_all_edgeblack_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_pop_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/cus_round_top_edge_primary"
        android:gravity="center"
        android:text="@string/Alert"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"

        />

    <TextView
        android:id="@+id/txt_pop10_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:minHeight="@dimen/_60sdp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_4sdp"
        android:weightSum="2">

        <TextView
            android:id="@+id/txt_pop10_One"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Yes"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/txt_pop10_Two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/No"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>


</LinearLayout>