<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainlayout"
    android:background="@color/centre_solid"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_f1_back"
            android:layout_width="@dimen/top_bar_profile"
            android:layout_height="@dimen/top_bar_profile"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingRight="@dimen/_10sdp"
            android:src="@drawable/left_arrow_shape" />


        <TextView
            android:id="@+id/txt_f1_title"
            style="@style/fragment_txt_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:gravity="center_vertical"
            android:textColor="#A3A3A3"
            android:textSize="@dimen/_12sdp"
            android:text="@string/aboutme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:background="@drawable/text_field_bg"
            android:orientation="vertical"
            android:padding="@dimen/_1sdp">

            <LinearLayout
                android:id="@+id/lnr_deatils"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_avatar" />

                <EditText
                    android:id="@+id/edt_first_name"
                    style="@style/settingText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:editable="false"
                    android:text="My details" />
            </LinearLayout>

            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A3A3A3" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_avatar" />

                <EditText
                    android:id="@+id/edt_last_name"
                    style="@style/settingText"
                    android:editable="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="@string/lastname" />
            </LinearLayout>

            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A3A3A3" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_envelope" />

                <EditText
                    android:id="@+id/edt_email"
                    style="@style/settingText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:editable="false"
                    android:text="@string/email" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:gravity="center_vertical"
            android:textColor="#A3A3A3"
            android:textSize="@dimen/_12sdp"
            android:text="@string/information" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:background="@drawable/text_field_bg"
            android:paddingBottom="@dimen/_2sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/term_conditions_icon" />

            <EditText
                android:id="@+id/edt_terms"
                style="@style/settingText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/termsandcc"
                android:editable="false"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@drawable/text_field_bg"
            android:paddingBottom="@dimen/_2sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/privecy_policy_icon" />

            <EditText
                android:id="@+id/edt_privacy"
                style="@style/settingText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/privacy"
                android:editable="false"
                android:clickable="false"/>
        </LinearLayout>




        <RelativeLayout
            android:id="@+id/lnr_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_67sdp">

            <TextView
                android:id="@+id/txt_admin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:gravity="center_vertical"
                android:textColor="#A3A3A3"
                android:textSize="@dimen/_12sdp"
                android:text="@string/admin" />

            <TextView
                android:id="@+id/txt_default_location"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_28sdp"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textColor="#FFFFFF"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/bg_def_profile"
                android:text="@string/deflaoction" />



        <RelativeLayout
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp">
            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_3sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_42sdp"
                android:background="@drawable/text_field_bg"
                android:paddingBottom="@dimen/_2sdp"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/map_icon2" />

                <TextView
                    android:id="@+id/edt_location"
                    style="@style/settingText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:maxLines="2"
                    android:gravity="center_vertical"
                    android:text="@string/yourlocatoion"
                    />
            </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
       <!-- <LinearLayout
            android:id="@+id/lnr_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:background="@drawable/text_field_bg"
            android:paddingBottom="@dimen/_2sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/map_icon2" />

            <EditText
                android:id="@+id/edt_location"
                style="@style/settingText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/yourlocatoion"
                android:editable="false"
                android:clickable="false"/>
        </LinearLayout>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp">

            <TextView
                android:id="@+id/txt_feedback"
                style="@style/txt_event_welcome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btn_bg"
                android:text="@string/feedback" />

            <TextView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_36sdp" />

            <TextView
                android:id="@+id/txt_logout"
                style="@style/txt_event_welcome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/btn_bg"
                android:text="@string/logout" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>