<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_white_bg"
    tools:context="com.scenekey.fragment.Search_Fragment">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/view_no_tag"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/scenekey_logo"
                android:tint="@color/old_primary"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/tvSplashLogoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:textSize="@dimen/_28ssp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/old_primary"
                android:fontFamily="@font/hara_bara"
                android:text="@string/app_name" />

        </LinearLayout>

        <TextView
            android:layout_margin="@dimen/_30sdp"
            android:id="@+id/txt_sorry3"
            android:gravity="center"
            android:textColor="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sorry3"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:visibility="visible"
        android:id="@+id/rcViewSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"/>


    <TextView
        android:id="@+id/txt_search"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/bg_search_tag_inactive"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

</LinearLayout>
